'修改文件名'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<script src="js/idnex.js"></script>
+	<script src="js/index.js"></script>
 </head>
 <body>
 	<script>
